mesa: fix popping of texture state for GL_TEXTURE_BUFFER

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=36032